packages/isar_generator/test/errors/class/enum.dart
// only classes

import 'package:isar/isar.dart';

// ignore: invalid_annotation_target
@Collection()
enum Test { a, b, c }
